--- a/src/components/common/App/App.module.css
+++ b/src/components/common/App/App.module.css
@@ -16,25 +16,15 @@
 
 .container {
   max-width: 1260px;
-
   margin: 0 auto;
   padding: 30px;
 }
 
 .wrapper {
-  background: #ffffff;
+  background: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
   padding: 30px;
-  width: 100%;
-}
-
-.title {
-  margin: 0 0 30px;
-}
-
-.text {
-  margin: 0;
 }
 
 .content {
@@ -44,7 +34,6 @@
 
 .aside {
   flex: 0 0 300px;
-
   border-right: 1px solid #e5e5e5;
   padding-right: 20px;
 }
